brat/test/golden/imports/alias-clash.brat.golden
Error in alias-clash@2:15
import lib as A (z)
              ^

  Name clash: Alias not unique: "A"

