brat/test/golden/imports/alias-clash.brat
import lib as A (x, y)
import lib as A (z)

main :: Nat, Int, Bool
main = A.x, A.y, A.z